# MGEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  MGEngine.sln  README.md  todo.txt
.github/workflows/: msbuild.yml
FBXLoader/: FBXLoader.cpp  FBXLoader.vcxproj  FBXLoader.vcxproj.filters
MGEngine/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Color.cpp  Color.h  Color.hpp  Compression.cpp  Compression.hpp  Config.h  Config.hpp  Dirty.h  Engine.cpp  Engine.h  Engine.hpp  ErrorCodes.hpp  Event.hpp  FBXImporter.cpp  FBXImporter.h  File.cpp  File.h  File.hpp  FloatUtils.h  GLFWInput.cpp  GLFWInput.h  GLFWInput.hpp  GLFramebuffer.cpp  GLFramebuffer.h  GLFramebuffer.hpp  GLInclude.hpp  GLRenderer.cpp  GLRenderer.h  GLRenderer.hpp  GLShader.cpp  GLShader.h  GLShader.hpp  GLTexture.cpp  GLTexture.h  GLTexture.hpp  GL_DebugLayers.h  (+59 more)
MGEngine/Renderer/: IFramebuffer.hpp  IRenderer.hpp  IShader.cpp  IShader.hpp  ITexture.cpp  ITexture.hpp
MGEngine/Renderer/GL/: GLFramebuffer.cpp  GLFramebuffer.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp  GL_DebugLayers.hpp  GL_RAII.cpp  GL_RAII.hpp
MGEngine/assets/: fullscreenQuad.frag  fullscreenQuad.vert  mainShader.frag  mainShader.vert  mainShader_texture.frag  testShader.frag  textureShader.frag
MGEngine/assets/shaders/: fullscreenQuad.frag  mainShader_texture.frag
MGEngine/glad/: glad.c  glad.h
MGEngineTests/: InputTests.cpp  MGEngineTests.vcxproj  MGEngineTests.vcxproj.filters  TransformTests.cpp  VectorTests.cpp  pch.h
UserScript/: CMakeLists.txt  TestObject.cpp  TestObject.h  TestObject.hpp  UserScript.vcxproj  UserScript.vcxproj.filters  main.cpp
UserScript.run/: UserScript.run.xml
UserScript/assets/: cube.fbx  heart.fbx  test_relation_cubes.blend  test_relation_cubes.fbx
scripts/: create_assets_link.bat
utils/: create_assets_link.bat  create_assets_link.sh
